--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@types/react-dom": "18.2.7",
     "allotment": "^1.19.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "next": "13.4.19",
+    "next": "13.4.12",
     "next-auth": "^4.22.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
